--- a/ConwyCastleSiege/src/main/resources/gates.yml
+++ b/ConwyCastleSiege/src/main/resources/gates.yml
@@ -89,13 +89,13 @@ SoldiersPeak:
     min:
       ==: org.bukkit.util.Vector
       x: 917
-      y: 60
-      z: 127
+      y: 52
+      z: 121
     max:
       ==: org.bukkit.util.Vector
       x: 917
-      y: 52
-      z: 121
+      y: 59
+      z: 127
     breach_sound:
       ==: org.bukkit.util.Vector
       x: 917
@@ -113,18 +113,18 @@ SoldiersPeak:
       direction:
 
 Abrakhan:
-  main_gate:
+  abrakhan_main_gate:
     display_name: "Gatehouse"
     flag_name: "Gatehouse"
     min:
       ==: org.bukkit.util.Vector
       x: 92
-      y: 34
+      y: 31
       z: -18
     max:
       ==: org.bukkit.util.Vector
       x: 94
-      y: 31
+      y: 34
       z: -18
     breach_sound:
       ==: org.bukkit.util.Vector
@@ -149,12 +149,12 @@ Thunderstone:
     min:
       ==: org.bukkit.util.Vector
       x: 157
-      y: 70
+      y: 65
       z: 65
     max:
       ==: org.bukkit.util.Vector
       x: 157
-      y: 65
+      y: 70
       z: 69
     breach_sound:
       ==: org.bukkit.util.Vector
