Vanguard is back

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -315,3 +315,6 @@ commands:
   Warhound:
     description: Selects the warhound kit
     usage: /warhound
+  Vanguard:
+    description: Selects the vanguard kit
+    usage: /vanguard
