--- a/ConwyCastleSiege/src/main/resources/maps.yml
+++ b/ConwyCastleSiege/src/main/resources/maps.yml
@@ -487,7 +487,7 @@ Toucan_Moria:
   name: "Moria"
   start_time: 0
   doDaylightCycle: true
-  gamemode: "Assault"
+  gamemode: "Domination"
   duration:
     minutes: 40
     seconds: 0
