--- a/ConwyCastleSiege/src/main/resources/flags.yml
+++ b/ConwyCastleSiege/src/main/resources/flags.yml
@@ -8595,6 +8595,14 @@ Abrakhan:
         secondary_blocks:
           - "==": Vector
             x: 115
+            y: 20
+            z: 48
+          - "==": Vector
+            x: 119
+            y: 20
+            z: 48
+          - "==": Vector
+            x: 115
             y: 19
             z: 48
         air:
